<resources>
    <string name="app_name">SpeakPedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="clear">clear</string>
    <string name="game">Game</string>
    <string name="about_us">About us</string>
    <string name="about_speak">About SpeakPedia:\n \nSpeakPedia is a top language-learning tool that addresses the various demands of pronunciation and spelling in plenty of words. With a team of dedicated college level programmers, SpeakPedia aims to revolutionize the way people explore words, meanings, and linguistic nuances.\n \nMission and Vision\n \nThe primary mission of SpeakPedia is to empower individuals with the knowledge and tools to enhance their English skills. By providing a comprehensive and reliable Learning app, the team endeavors to make word learning accessible, efficient, and enjoyable for users of all backgrounds and proficiency levels. The vision of SpeakPedia is to foster a global community of English word enthusiasts who can confidently communicate, express themselves, and appreciate the beauty in English from local junior high school students.</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="start">Start</string>
    <string name="come_and_ha">Come and have a try to solve our Word Game challenge</string>
    <string name="welcome">Welcome</string>
    <string name="let">Let\'s improve and Enhance Your Words</string>
    <string name="SpeakPedia">SPEAKPEDIA</string>
    <string name="hint_its_all_fruits">Hint: Its all fruits!</string>
    <string name="del">DEL</string>
    <string name="speak">speak</string>
    <string name="good_job">good job</string>
    <string name="Translate">Translate</string>

</resources>