<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="429dp"
    android:layout_height="915dp"
    android:elevation="4dp"
    android:background="@drawable/yellowbg"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/q"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="577dp"
            android:text="@string/q"
            android:textAppearance="@style/q"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/w"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="96dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="577dp"
            android:text="@string/w"
            android:textAppearance="@style/w"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/s"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="112dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="630dp"
            android:text="@string/s"
            android:textAppearance="@style/s"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/d"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="142dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="630dp"
            android:text="@string/d"
            android:textAppearance="@style/d"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/g"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="205dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="630dp"
            android:text="@string/g"
            android:textAppearance="@style/g"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/h"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="236dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="630dp"
            android:text="@string/h"
            android:textAppearance="@style/h"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/e"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="127dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="577dp"
            android:text="@string/e"
            android:textAppearance="@style/e"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/r"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="158dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="578dp"
            android:text="@string/r"
            android:textAppearance="@style/r"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/t"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="189dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="579dp"
            android:text="@string/t"
            android:textAppearance="@style/t"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal|center_vertical"
            />

        <ImageButton
            android:id="@+id/swm_icon_pa"
            android:layout_width="33dp"
            android:layout_height="50dp"
            android:background="@drawable/menu"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="374dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:clipToOutline="true"
            />

        <EditText
            android:id="@+id/display_text"
            android:layout_width="352dp"
            android:layout_height="61dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/frame_27"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="145dp" />


        <ImageButton
            android:id="@+id/imageButtondel"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/backspace"
            android:contentDescription="DEL" />


        <Button
            android:id="@+id/imageButtonspeak"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="-50dp"
            android:background="@drawable/volume"
            android:padding="10dp"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/appicon" />


        <ImageButton
            android:id="@+id/imageButtonclearall"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/del" />

        <ImageView
            android:id="@+id/imageButtonspeech"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/baseline_mic_24"
            android:clickable="true"
            android:focusable="true" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="352dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/frame_26">

            <LinearLayout
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>